--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.1.1",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "firebase": "^9.22.2",
@@ -19,6 +20,7 @@
     "react-hook-form": "^7.45.0",
     "react-icons": "^4.9.0",
     "remask": "^1.2.2",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "yup": "^1.2.0"
   }
 }
