--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "@hookform/resolvers": "^3.1.1",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
-    "firebase": "^9.22.2",
+    "firebase": "^9.23.0",
     "next": "13.4.6",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.0",
     "react-icons": "^4.9.0",
+    "react-toastify": "^9.1.3",
     "remask": "^1.2.2",
     "uuid": "^9.0.0",
     "yup": "^1.2.0"
